# conways-wasm-react

./: .eslintignore  .gitignore  README.md  conways_game_ws.code-workspace  package-lock.json  package.json  tailwind.config.js  webpack.config.js
public/: index.html
src/: App.js  index.js
src/components/: Cell.js  Grid.js  Start.js
src/contexts/: Simulation.js
wasm_module/: .gitignore  Cargo.toml  LICENCE  README.md
wasm_module/src/: lib.rs  universe.rs
wasm_module/src/tests/: mod.rs  web.rs
wasm_module/src/universe/: mod.rs  observer.rs
wasm_module/src/utils/: mod.rs
